--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "aw",
-  "homepage": "https://gaaramk.github.io/award",
+  "name": "award",
+  "homepage": "https://gaaramk.github.io/award/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
